crates/neo-tui/tests/snapshots/render__ask_card_100x30.snap
---
source: crates/neo-tui/tests/render.rs
expression: frame
---
Stark  ○ NO MIC YET  v dictates   chat · , settings · : commands · ? keys
1  Conversation    2  Runs (0/0 live)    3  Activity (1)
Ask Starkbot to do something in an app or on the web.
i or a starts typing · Enter sends · : runs a command









              ┌ Question ────────────────────────────────────────────────────────────┐
              │Tell me what goes in “Invoice number” and I'll carry on.              │
              │                                                                      │
              │[i] type your answer                                                  │
              └ i types the answer · the card stays until it is answered ────────────┘









                                                                                              ▼ live
> Enter sends · Alt-Enter or Ctrl-J newline · Esc leaves insert
CARD │ /fixtures/neo/neo.db v3 │ OpenAI API key · openai/sol-latest │ keys missing: anthropic
--- styles ---
fg=Cyan bg=Reset mod=BOLD  Conversation
fg=Cyan bg=Reset mod=BOLD  chat
fg=Cyan bg=Reset mod=NONE  >
fg=Cyan bg=Reset mod=NONE  │
fg=Cyan bg=Reset mod=NONE  │[i]
fg=Cyan bg=Reset mod=NONE  ┌ Question ────────────────────────────────────────────────────────────┐
fg=Cyan bg=Reset mod=NONE  └ i types the answer · the card stays until it is answered ────────────┘
fg=DarkGray bg=Reset mod=NONE  1
fg=DarkGray bg=Reset mod=NONE  2  Runs (0/0 live)    3  Activity (1)
fg=DarkGray bg=Reset mod=NONE  Ask Starkbot to do something in an app or on the web.
fg=DarkGray bg=Reset mod=NONE  Enter sends · Alt-Enter or Ctrl-J newline · Esc leaves insert
fg=DarkGray bg=Reset mod=NONE  i or a starts typing · Enter sends · : runs a command
fg=DarkGray bg=Reset mod=NONE  · , settings · : commands · ? keys
fg=DarkGray bg=Reset mod=NONE  ▼ live
fg=DarkGray bg=Reset mod=NONE  ○ NO MIC YET  v dictates
fg=Reset bg=Reset mod=BOLD  Stark
fg=White bg=Reset mod=BOLD  Tell me what goes in “Invoice number” and I'll carry on.
fg=Yellow bg=Reset mod=NONE  CARD │ /fixtures/neo/neo.db v3 │ OpenAI API key · openai/sol-latest │ keys missing: anthropic
