crates/neo-tui/tests/snapshots/render__ask_card_120x40.snap
---
source: crates/neo-tui/tests/render.rs
expression: frame
---
Stark  ○ NO MIC YET  v dictates   chat  /project · /model · /login · /help
Ask Starkbot to do something in an app or on the web.
Type a message and press Enter · / opens commands















                        ┌ Question ────────────────────────────────────────────────────────────┐
                        │Tell me what goes in “Invoice number” and I'll carry on.              │
                        │                                                                      │
                        │[i] type your answer                                                  │
                        └ i types the answer · the card stays until it is answered ────────────┘












                                                                                                                  ▼ live
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ > / opens commands · i starts typing                                                                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
CARD │ /fixtures/neo/neo.db v3 │ OpenAI API key · openai/gpt-5.6-sol │ keys missing: anthropic │ account none
--- styles ---
fg=Cyan bg=Reset mod=BOLD  chat
fg=Cyan bg=Reset mod=NONE  >
fg=Cyan bg=Reset mod=NONE  │
fg=Cyan bg=Reset mod=NONE  │[i]
fg=Cyan bg=Reset mod=NONE  ┌ Question ────────────────────────────────────────────────────────────┐
fg=Cyan bg=Reset mod=NONE  └ i types the answer · the card stays until it is answered ────────────┘
fg=DarkGray bg=Reset mod=NONE  / opens commands · i starts typing
fg=DarkGray bg=Reset mod=NONE  /project · /model · /login · /help
fg=DarkGray bg=Reset mod=NONE  Ask Starkbot to do something in an app or on the web.
fg=DarkGray bg=Reset mod=NONE  Type a message and press Enter · / opens commands
fg=DarkGray bg=Reset mod=NONE  │
fg=DarkGray bg=Reset mod=NONE  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
fg=DarkGray bg=Reset mod=NONE  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
fg=DarkGray bg=Reset mod=NONE  ▼ live
fg=DarkGray bg=Reset mod=NONE  ○ NO MIC YET  v dictates
fg=Reset bg=Reset mod=BOLD  Stark
fg=White bg=Reset mod=BOLD  Tell me what goes in “Invoice number” and I'll carry on.
fg=Yellow bg=Reset mod=NONE  CARD │ /fixtures/neo/neo.db v3 │ OpenAI API key · openai/gpt-5.6-sol │ keys missing: anthropic │ account none
