crates/neo-tui/tests/snapshots/render__confirm_card_60x20.snap
---
source: crates/neo-tui/tests/render.rs
expression: frame
---
Ask Starkbot to do something in an app or on the web.
Type a message and press Enter · / opens commands




┌ Confirm ─────────────────────────────────────────────────┐
│`Pay $42.00 now` says “pay”.                              │
│                                                          │
│where Checkout — https://shop.test/cart                   │
│why   safety:spends                                       │
│                                                          │
│[y] yes   [n] no                                          │
└ y approves · n denies · Enter is not an answer ──────────┘

                                                      ▼ live
╭──────────────────────────────────────────────────────────╮
│ > / opens commands · i starts typing                     │
╰──────────────────────────────────────────────────────────╯
CARD │ ○ NO MIC YET │ /fixtures/neo/neo.db v3
--- styles ---
fg=Cyan bg=Reset mod=NONE  >
fg=DarkGray bg=Reset mod=NONE  / opens commands · i starts typing
fg=DarkGray bg=Reset mod=NONE  Ask Starkbot to do something in an app or on the web.
fg=DarkGray bg=Reset mod=NONE  Type a message and press Enter · / opens commands
fg=DarkGray bg=Reset mod=NONE  where
fg=DarkGray bg=Reset mod=NONE  why
fg=DarkGray bg=Reset mod=NONE  │
fg=DarkGray bg=Reset mod=NONE  ╭──────────────────────────────────────────────────────────╮
fg=DarkGray bg=Reset mod=NONE  ╰──────────────────────────────────────────────────────────╯
fg=DarkGray bg=Reset mod=NONE  ▼ live
fg=Green bg=Reset mod=NONE  [y]
fg=Red bg=Reset mod=NONE  [n]
fg=White bg=Reset mod=BOLD  `Pay $42.00 now` says “pay”.
fg=Yellow bg=Reset mod=NONE  CARD │ ○ NO MIC YET │ /fixtures/neo/neo.db v3
fg=Yellow bg=Reset mod=NONE  │
fg=Yellow bg=Reset mod=NONE  ┌ Confirm ─────────────────────────────────────────────────┐
fg=Yellow bg=Reset mod=NONE  └ y approves · n denies · Enter is not an answer ──────────┘
